@@ -1,11 +1,9 @@
 package com.sarabarbara.manager.controllers;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.sarabarbara.manager.dto.CreateResponse;
-import com.sarabarbara.manager.dto.LoginResponse;
-import com.sarabarbara.manager.dto.SearchResponse;
-import com.sarabarbara.manager.dto.UpdateUserResponse;
-import com.sarabarbara.manager.dto.users.*;
+import com.sarabarbara.manager.dto.users.UserDTO;
+import com.sarabarbara.manager.dto.users.UserLoginDTO;
+import com.sarabarbara.manager.exceptions.UserValidateException;
 import com.sarabarbara.manager.models.Genre;
 import com.sarabarbara.manager.models.Users;
 import com.sarabarbara.manager.services.UsersService;
@@ -20,13 +18,10 @@ import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyString;
+import static org.hamcrest.Matchers.nullValue;
+import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.doThrow;
 import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
@@ -51,53 +46,53 @@ class UsersControllersTest {
     private UsersService usersService;
 
     private MockMvc mockMvc;
-    private UserCreateDTO userCreateDTO;
+
+    private Users user;
 
     @BeforeEach
     void setUp() {
 
         mockMvc = MockMvcBuilders.standaloneSetup(usersController).build();
 
-        userCreateDTO =
-                UserCreateDTO.builder()
-                        .name("Prueba")
-                        .username("curco")
-                        .email("test123@gmail.com")
-                        .genre(Genre.PNTS)
-                        .profilePictureURL(null)
-                        .premium(true)
-                        .build();
+        user = Users.builder()
+                .id(1L)
+                .name("Prueba")
+                .username("curcu")
+                .password("Testpassword12#")
+                .email("test123@gmail.com")
+                .genre(Genre.PNTS)
+                .profilePictureURL(null)
+                .premium(true)
+                .build();
     }
 
     @Test
     void registerControllerTest() throws Exception {
 
-        CreateResponse response = CreateResponse.builder()
-                .success(true)
-                .user(userCreateDTO)
-                .message("User created successfully")
-                .build();
-
-        when(usersService.createUser(any(Users.class))).thenReturn(response);
+        when(usersService.createUser(any(Users.class))).thenReturn(user);
 
         mockMvc.perform(post("/register")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content("{\"name\":\"Prueba\", \"username\":\"curcu\", \"email\":\"test123@gmail.com\", " +
-                                "\"password\":\"Testpassword1#\", \"genre\":\"PNTS\", \"profilePictureURL\":\"null\"," +
+                                "\"password\":\"Testpassword12#\", \"genre\":\"PNTS\", " +
+                                "\"profilePictureURL\":\"null\"," +
                                 " \"premium\":true}"))
                 .andExpect(status().isCreated())
                 .andExpect(jsonPath("$.success").value(true))
-                .andExpect(jsonPath("$.message").value("User created successfully"));
+                .andExpect(jsonPath("$.message").value("User created successfully"))
+                .andExpect(jsonPath("$.userCreate.name").value("Prueba"))
+                .andExpect(jsonPath("$.userCreate.username").value("curcu"))
+                .andExpect(jsonPath("$.userCreate.email").value("test123@gmail.com"))
+                .andExpect(jsonPath("$.userCreate.genre").value("PNTS"))
+                .andExpect(jsonPath("$.userCreate.profilePictureURL").value(nullValue()))
+                .andExpect(jsonPath("$.userCreate.premium").value(true));
     }
 
     @Test
     void registerControllerDuplicatedUsernameTest() throws Exception {
 
-        CreateResponse response = CreateResponse.builder()
-                .success(false).user(userCreateDTO)
-                .message("Can't create user: The username 'curcu' is already taken.")
-                .build();
-        when(usersService.createUser(any(Users.class))).thenReturn(response);
+        when(usersService.createUser(any(Users.class)))
+                .thenThrow(new UserValidateException("Can't create user: The username 'curcu' is already taken."));
 
         mockMvc.perform(post("/register")
                         .contentType(MediaType.APPLICATION_JSON)
@@ -106,17 +101,16 @@ class UsersControllersTest {
                                 " \"premium\":true}"))
                 .andExpect(status().isBadRequest())
                 .andExpect(jsonPath("$.success").value(false))
-                .andExpect(jsonPath("$.message").value("Can't create user: The username 'curcu' is already taken."));
+                .andExpect(jsonPath("$.message")
+                        .value("Can't create user: The username 'curcu' is already taken."));
     }
 
     @Test
     void registerControllerDuplicatedEmailTest() throws Exception {
 
-        CreateResponse response = CreateResponse.builder()
-                .success(false).user(userCreateDTO)
-                .message("Can't create user: The email 'test@gmail.com' is already taken.").build();
-
-        when(usersService.createUser(any(Users.class))).thenReturn(response);
+        when(usersService.createUser(any(Users.class)))
+                .thenThrow(
+                        new UserValidateException("Can't create user: The email 'test@gmail.com' is already taken."));
 
         mockMvc.perform(post("/register")
                         .contentType(MediaType.APPLICATION_JSON)
@@ -125,8 +119,8 @@ class UsersControllersTest {
                                 " \"premium\":true}"))
                 .andExpect(status().isBadRequest())
                 .andExpect(jsonPath("$.success").value(false))
-                .andExpect(jsonPath("$.message").value("Can't create user: The email 'test@gmail.com' is already " +
-                        "taken."));
+                .andExpect(jsonPath("$.message")
+                        .value("Can't create user: The email 'test@gmail.com' is already taken."));
     }
 
     @Test
@@ -142,82 +136,64 @@ class UsersControllersTest {
                                 "\"premium\":true}"))
                 .andExpect(status().isInternalServerError())
                 .andExpect(jsonPath("$.success").value(false))
-                .andExpect(jsonPath("$.message").value("Can't create user: Some internal error occurred."));
+                .andExpect(jsonPath("$.message")
+                        .value("Can't create user: Some internal error occurred."));
     }
 
     @Test
     void searchTotalUserControllerTest() throws Exception {
 
-        UserSearchDTO searchDTO = UserSearchDTO.builder()
-                .username("curcu")
-                .profilePictureURL(null)
-                .build();
-        SearchResponse<UserSearchDTO> response =
-                SearchResponse.<UserSearchDTO>builder()
-                        .results(Collections.singletonList(searchDTO))
-                        .totalResults(1)
-                        .currentPage(0)
-                        .totalPage(1)
-                        .build();
-
-        when(usersService.searchUser(anyString(), any(Integer.class), any(Integer.class))).thenReturn(response);
+        when(usersService.searchUser(anyString(), anyInt(), anyInt())).thenReturn(List.of(user));
 
         mockMvc.perform(post("/search/users")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content("curcu")
-                        .param("page", "0")
+                        .content("\"curcu\"")
+                        .param("page", "1")
                         .param("size", "10"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.results[0].username").value("curcu"))
-                .andExpect(jsonPath("$.totalResults").value(1));
+                .andExpect(jsonPath("$.results[0].profilePictureURL").value(nullValue()))
+                .andExpect(jsonPath("$.totalResults").value(1))
+                .andExpect(jsonPath("$.currentPage").value(1))
+                .andExpect(jsonPath("$.totalPage").value(1));
 
     }
 
     @Test
     void searchPartialUserControllerTest() throws Exception {
 
-        List<UserSearchDTO> searchDTOList = new ArrayList<>(Arrays.asList(
-                UserSearchDTO.builder()
-                        .username("curcu")
-                        .build(),
-                UserSearchDTO.builder()
-                        .username("curcolopodis")
-                        .build()
-        ));
+        Users user2 = Users.builder()
+                .name("Prueba")
+                .username("curcoide")
+                .password("Testpassword12#")
+                .email("test@gmail.com")
+                .genre(Genre.PNTS)
+                .profilePictureURL(null)
+                .premium(true)
+                .build();
 
-        SearchResponse<UserSearchDTO> response =
-                SearchResponse.<UserSearchDTO>builder()
-                        .results(searchDTOList)
-                        .totalResults(2)
-                        .currentPage(0)
-                        .totalPage(1)
-                        .build();
-
-        when(usersService.searchUser(anyString(), any(Integer.class), any(Integer.class))).thenReturn(response);
+        when(usersService.searchUser(anyString(), any(Integer.class), any(Integer.class)))
+                .thenReturn(List.of(user, user2));
 
         mockMvc.perform(post("/search/users")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content("curc")
-                        .param("page", "0")
+                        .content("\"cur\"")
+                        .param("page", "1")
                         .param("size", "10"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.results[0].username").value("curcu"))
-                .andExpect(jsonPath("$.results[1].username").value("curcolopodis"))
-                .andExpect(jsonPath("$.totalResults").value(2));
+                .andExpect(jsonPath("$.results[0].profilePictureURL").value(nullValue()))
+                .andExpect(jsonPath("$.results[1].username").value("curcoide"))
+                .andExpect(jsonPath("$.results[1].profilePictureURL").value(nullValue()))
+                .andExpect(jsonPath("$.totalResults").value(2))
+                .andExpect(jsonPath("$.currentPage").value(1))
+                .andExpect(jsonPath("$.totalPage").value(1));
     }
 
     @Test
     void searchZeroUserControllerTest() throws Exception {
 
-        SearchResponse<UserSearchDTO> response =
-                SearchResponse.<UserSearchDTO>builder()
-                        .results(Collections.emptyList())
-                        .totalResults(0)
-                        .currentPage(0)
-                        .totalPage(1)
-                        .build();
-
-        when(usersService.searchUser(anyString(), any(Integer.class), any(Integer.class))).thenReturn(response);
+        when(usersService.searchUser(anyString(), anyInt(), anyInt())).thenReturn(List.of());
 
         mockMvc.perform(post("/search/users")
                         .contentType(MediaType.APPLICATION_JSON)
@@ -230,7 +206,8 @@ class UsersControllersTest {
     @Test
     void searchUserErrorControllerTest() throws Exception {
 
-        when(usersService.searchUser(anyString(), any(Integer.class), any(Integer.class))).thenThrow(new RuntimeException("Can't search user: Some internal error occurred."));
+        when(usersService.searchUser(anyString(), any(Integer.class), any(Integer.class)))
+                .thenThrow(new RuntimeException("Can't search user: Some internal error occurred."));
 
         mockMvc.perform(post("/search/users")
                         .contentType(MediaType.APPLICATION_JSON)
@@ -244,42 +221,31 @@ class UsersControllersTest {
         String identifier = "curcu";
 
         UserDTO userDTO = UserDTO.builder()
-                .id(1233L)
-                .name("Curcu")
-                .username("curcu")
-                .password("newPassword123#")
-                .email("test123@gmail.com")
-                .genre(Genre.PNTS)
+                .name("Test")
+                .username("chikitronix")
+                .password("TestSuperPAssword123#")
+                .email("testemail@gmail.com")
+                .genre(Genre.F)
                 .profilePictureURL(null)
-                .premium(false)
+                .premium(true)
                 .build();
 
-        UpdateUserResponse response = UpdateUserResponse.builder()
-                .success(true)
-                .message("User updated successfully")
-                .user(UserUpdateDTO.builder()
-                        .name("Test")
-                        .username("tasty")
-                        .email("test12@gmail.com")
-                        .genre(Genre.F)
-                        .profilePictureURL(null)
-                        .premium(true)
-                        .build())
-                .build();
+        when(usersService.updateUser(anyString(), any(UserDTO.class)))
+                .thenReturn(new Users(1L, "Test", "chikitronix",
+                        "TestSuperPAssword123#", "testemail@gmail.com",
+                        Genre.F, null, true));
 
-        when(usersService.updateUser(anyString(), any(UserDTO.class))).thenReturn(response);
-
-        String userDTOJson = new ObjectMapper().writeValueAsString(userDTO);
+        String userUpdateDTOJson = new ObjectMapper().writeValueAsString(userDTO);
 
         mockMvc.perform(patch("/{identifier}/update", identifier)
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(userDTOJson))
+                        .content(userUpdateDTOJson))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.success").value(true))
                 .andExpect(jsonPath("$.message").value("User updated successfully"))
                 .andExpect(jsonPath("$.user.name").value("Test"))
-                .andExpect(jsonPath("$.user.username").value("tasty"))
-                .andExpect(jsonPath("$.user.email").value("test12@gmail.com"))
+                .andExpect(jsonPath("$.user.username").value("chikitronix"))
+                .andExpect(jsonPath("$.user.email").value("testemail@gmail.com"))
                 .andExpect(jsonPath("$.user.genre").value("F"))
                 .andExpect(jsonPath("$.user.profilePictureURL").isEmpty())
                 .andExpect(jsonPath("$.user.premium").value(true))
@@ -292,18 +258,13 @@ class UsersControllersTest {
         String identifier = "curcu";
 
         UserDTO userDTO = UserDTO.builder()
-                .username("curcu")
+                .username("chikitronix")
                 .build();
 
-        UpdateUserResponse response = UpdateUserResponse.builder()
-                .success(true)
-                .message("User updated successfully")
-                .user(UserUpdateDTO.builder()
-                        .username("tasty")
-                        .build())
-                .build();
-
-        when(usersService.updateUser(anyString(), any(UserDTO.class))).thenReturn(response);
+        when(usersService.updateUser(anyString(), any(UserDTO.class)))
+                .thenReturn(new Users(1L, "Prueba", "chikitronix",
+                        "Testpassword12#", "test123@gmail.com",
+                        Genre.PNTS, null, true));
 
         String userDTOJson = new ObjectMapper().writeValueAsString(userDTO);
 
@@ -313,27 +274,22 @@ class UsersControllersTest {
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.success").value(true))
                 .andExpect(jsonPath("$.message").value("User updated successfully"))
-                .andExpect(jsonPath("$.user.username").value("tasty"));
+                .andExpect(jsonPath("$.user.username").value("chikitronix"));
     }
 
     @Test
-    void updateUserBadRequestControllerTest() throws Exception {
+    void updateUserDuplicatedUsernameControllerTest() throws Exception {
 
-        String identifier = "curcu";
+        String identifier = "chikitronix";
+        String newIdentifier = "curcu";
 
         UserDTO userDTO = UserDTO.builder()
-                .username("curcu")
+                .username(newIdentifier)
                 .build();
 
-        UpdateUserResponse response = UpdateUserResponse.builder()
-                .success(false)
-                .message("User update failed")
-                .user(UserUpdateDTO.builder()
-                        .username("curcu")
-                        .build())
-                .build();
-
-        when(usersService.updateUser(anyString(), any(UserDTO.class))).thenReturn(response);
+        when(usersService.updateUser(anyString(), any(UserDTO.class)))
+                .thenThrow(new UserValidateException("User update failed. The username " + newIdentifier + " is " +
+                        "already taken."));
 
         String userDTOJson = new ObjectMapper().writeValueAsString(userDTO);
 
@@ -342,8 +298,60 @@ class UsersControllersTest {
                         .content(userDTOJson))
                 .andExpect(status().isBadRequest())
                 .andExpect(jsonPath("$.success").value(false))
-                .andExpect(jsonPath("$.message").value("User update failed"))
-                .andExpect(jsonPath("$.user.username").value("curcu"));
+                .andExpect(jsonPath("$.message").value("User update failed. The username " + newIdentifier + " is " +
+                        "already taken."));
+    }
+
+    @Test
+    void updateUserDuplicatedEmailControllerTest() throws Exception {
+
+        String identifier = "curcu";
+        String newEmail = "test1234545@gmail.com";
+
+        UserDTO userDTO = UserDTO.builder()
+                .email(newEmail)
+                .build();
+
+        when(usersService.updateUser(anyString(), any(UserDTO.class)))
+                .thenThrow(new UserValidateException("User update failed. The email " + newEmail + " is already taken" +
+                        "."));
+
+        String userDTOJson = new ObjectMapper().writeValueAsString(userDTO);
+
+        mockMvc.perform(patch("/{identifier}/update", identifier)
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(userDTOJson))
+                .andExpect(status().isBadRequest())
+                .andExpect(jsonPath("$.success").value(false))
+                .andExpect(jsonPath("$.message")
+                        .value("User update failed. The email " + newEmail + " is already taken."));
+    }
+
+    @Test
+    void updateUserInvalidPasswordControllerTest() throws Exception {
+
+        String identifier = "curcu";
+
+        UserDTO userDTO = UserDTO.builder()
+                .password("as23")
+                .build();
+
+        when(usersService.updateUser(anyString(), any(UserDTO.class)))
+                .thenThrow(
+                        new UserValidateException("The password does not meet the security requirements. "
+                                + "Special characters allowed: !?/@#$%^&*()_+=-"));
+
+        String userDTOJson = new ObjectMapper().writeValueAsString(userDTO);
+
+        mockMvc.perform(patch("/{identifier}/update", identifier)
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(userDTOJson))
+                .andExpect(status().isBadRequest())
+                .andExpect(jsonPath("$.success").value(false))
+                .andExpect(jsonPath("$.message")
+                        .value("The password does not meet the security requirements. "
+                                + "Special characters allowed: !?/@#$%^&*()_+=-"))
+                .andExpect(jsonPath("$.user").doesNotExist());
     }
 
     @Test
@@ -365,7 +373,8 @@ class UsersControllersTest {
                         .content(userDTOJson))
                 .andExpect(status().isInternalServerError())
                 .andExpect(jsonPath("$.success").value(false))
-                .andExpect(jsonPath("$.message").value("Can't update user: Some internal error occurred."));
+                .andExpect(jsonPath("$.message")
+                        .value("Can't update user: Some internal error occurred."));
 
     }
 
@@ -393,19 +402,34 @@ class UsersControllersTest {
     }
 
     @Test
-    void loginUserControllerTest() throws Exception {
+    void loginUserUsernameControllerTest() throws Exception {
 
         UserLoginDTO userLoginDTO = UserLoginDTO.builder()
                 .username("curcu")
                 .password("testPassword123#")
                 .build();
 
-        LoginResponse response = LoginResponse.builder()
-                .success(true)
-                .message("Logged successfully")
+        when(usersService.loginUser(any(UserLoginDTO.class))).thenReturn(true);
+
+        String userLoginDTOJson = new ObjectMapper().writeValueAsString(userLoginDTO);
+
+        mockMvc.perform(post("/login")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(userLoginDTOJson))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.success").value(true))
+                .andExpect(jsonPath("$.message").value("Logged successfully"));
+    }
+
+    @Test
+    void loginUserEmailControllerTest() throws Exception {
+
+        UserLoginDTO userLoginDTO = UserLoginDTO.builder()
+                .email("curcu@gmail.com")
+                .password("testPassword123#")
                 .build();
 
-        when(usersService.loginUser(any(UserLoginDTO.class))).thenReturn(response);
+        when(usersService.loginUser(any(UserLoginDTO.class))).thenReturn(true);
 
         String userLoginDTOJson = new ObjectMapper().writeValueAsString(userLoginDTO);
 
@@ -421,16 +445,11 @@ class UsersControllersTest {
     void loginUserControllerFailedTest() throws Exception {
 
         UserLoginDTO userLoginDTO = UserLoginDTO.builder()
-                .username("curcu")
+                .email("curcu@gmail.com")
                 .password("testPassword123#")
                 .build();
 
-        LoginResponse response = LoginResponse.builder()
-                .success(false)
-                .message("Can't logged the user. Ensure the email/username and password are correct")
-                .build();
-
-        when(usersService.loginUser(any(UserLoginDTO.class))).thenReturn(response);
+        when(usersService.loginUser(any(UserLoginDTO.class))).thenReturn(false);
 
         String userLoginDTOJson = new ObjectMapper().writeValueAsString(userLoginDTO);
 
@@ -461,7 +480,8 @@ class UsersControllersTest {
                         .content(userLoginDTOJson))
                 .andExpect(status().isInternalServerError())
                 .andExpect(jsonPath("$.success").value(false))
-                .andExpect(jsonPath("$.message").value("Can't logged the user: Some internal error occurred."));
+                .andExpect(jsonPath("$.message")
+                        .value("Can't logged the user: Some internal error occurred."));
     }
 
 }
